--- a/layout2.html
+++ b/layout2.html
@@ -122,7 +122,7 @@
              <div class="overlay-wrap">
              <div class="overlay-black"><span>$30</span></div>
              </div>
-             <img src="./image/product1.jpeg" alt="">
+             <img src="/image/product1.jpeg" alt="">
           </div>
         </div>
         <div class="shop-item">
