--- a/layout2.html
+++ b/layout2.html
@@ -126,10 +126,10 @@
           </div>
         </div>
         <div class="shop-item">
-          <img src="image/product2.jpg" alt="">
+          <img src="/image/product2.jpg" alt="">
         </div>
         <div class="shop-item">
-          <img src="./image/product3.jpg" alt="">
+          <img src="/image/product3.jpg" alt="">
         </div>
       </div>   
     </div>
